--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <script src="sketch.js"></script>
     <script src="paragraphes.js"></script>
     <script src="person.js"></script>
+    <script src="block.js"></script>
+    <script src="coin.js"></script>
   </body>
 </html>
+
