--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <script src="person.js"></script>
     <script src="block.js"></script>
     <script src="coin.js"></script>
+    <script src="question.js"></script>
   </body>
 </html>
-
