--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <script src="block.js"></script>
     <script src="coin.js"></script>
     <script src="question.js"></script>
+    <script src="person2.js"></script>
+    <script src="levelmenu.js"></script>
+    <script src="mouseclicked.js"></script>
   </body>
 </html>
